# Terrain-Generator

./: .gitignore  CMakeLists.txt  README.md
shaders/: skybox.frag  skybox.vert  terrain.frag  terrain.vert
src/: camera.h  main.cpp  noise.h  shader.h  skybox.h  terrain.cpp  terrain.h
